changed project structure, code duplication removed, tests renamed, BasedTest and BasePage created, .gitignore created

--- a/ABBYYTest/ABBYYTest.UnitTests/ABBYYTest.UnitTests.csproj
+++ b/ABBYYTest/ABBYYTest.UnitTests/ABBYYTest.UnitTests.csproj
@@ -60,7 +60,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AdditionalFunc.cs" />
+    <Compile Include="BaseTest.cs" />
     <Compile Include="UnitTestCalcPage.cs" />
     <Compile Include="UnitTestIterpOfferPage.cs" />
     <Compile Include="UnitTestMainPage.cs" />
