--- a/ABBYYTest/ABBYYTest/ABBYYTest.csproj
+++ b/ABBYYTest/ABBYYTest/ABBYYTest.csproj
@@ -36,6 +36,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasePage.cs" />
     <Compile Include="CalculatorPage.cs" />
     <Compile Include="InterpOfferPage.cs" />
     <Compile Include="MainPage.cs" />
