--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ $ cat .gitignore
 /ABBYYTest/ABBYYTest/obj
 /ABBYYTest/ABBYYTest.UnitTests/bin
 /ABBYYTest/ABBYYTest.UnitTests/obj
+*.suo
+/ABBYYTest/.nuget
